--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
     <div class="container">
         <div class="conteudo-primario">
+
+            <iframe name="iframe_download" class="hidden"></iframe>
+            <a href="/caminho/para/download.pdf" target="iframe_download">Clique para baixar</a>
+
             <img class="logo" src="/img/foto-carol.png" alt="">
 
             <h1 style="position: relative;top: 9px;">Caroldev_747</h1>
