--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <title>Caroline Samara</title>
 </head>
 <body>
+    <!-- início do preloader -->
+    <div id="preloader">
+        <div class="inner">
+           <div class="bolas">
+              <div></div>
+              <div></div>
+              <div></div>                    
+           </div>
+        </div>
+    </div>
+    <!-- fim do preloader -->
 
     <div class="container">
         <div class="conteudo-primario">
